# Factorization

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_REVIEW.md  INVESTIGATION_COMPLETE.txt  Makefile  PROMETHEUS_CODE_COMPARISON.md  PROMETHEUS_INVESTIGATION_SUMMARY.md  PROMETHEUS_SESSION1_HANDOVER.md  README.md  README_INVESTIGATION.md  c1_gen_history_log.txt  claude_improvement_plan.md  codex_improvement_plan.md  debug_collaborative.py  hybrid_pilot_output.txt  main.py  pilot_results_negative_finding.md  plan_20251024.md  plan_20251028.md  plan_20251029.md  plan_20251101.md  plan_20251102.md  prometheus_phase1_implementation_plan.md  prototype.py  pyproject.toml  requirements-dev.txt  requirements.txt  research_methodology.md  results_template.md  run_c1_gen_history_pilots.sh  run_c2_gen_analysis_pilots.sh  run_c2_pilot.sh  run_c2_validation.sh  test_api.py  theoretical_foundation.md
.github/: CONTRIBUTING.md  PR_C2_BODY.md
analysis/: c1_validation_exploration.ipynb  visualize_comparison.ipynb  visualize_metrics.ipynb
docs/: c2_root_cause_analysis.md  prometheus_underperformance_analysis.md
metrics/: llm_test_run.json  merge_test.json  test_run.json
results/: README.md  baseline_validation.json  llm_pilot.json  prometheus_pilot.json
scripts/: aggregate_results.py  analyze_c1_validation.py  analyze_c2_validation.py  analyze_fitness_growth.py  analyze_gen0_vs_gen1.py  analyze_prometheus_manual.py  benchmark_prometheus.py  run_hybrid_pilot.py  visualize_c1_results.py  visualize_c2_results.py
src/: adaptive_engine.py  comparison.py  config.py  crucible.py  evolution.py  logging_config.py  meta_learning.py  (+3 more)
(+116 files in other folders)
